--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
   "dependencies": {
+    "@vimeo/player": "^2.15.3",
     "aos": "^2.3.4",
     "foundation-sites": "^6.6.0",
+    "headroom.js": "^0.12.0",
     "jquery": "^3.2.1",
     "jquery-inview": "^1.1.2",
     "motion-ui": "^2.0.3",
     "pace-progressbar": "^1.0.9",
+    "photoswipe": "^4.1.3",
     "slick-carousel": "^1.8.1",
     "what-input": "^5.1.2"
   },
