--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-inject": "^5.0.5",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
@@ -50,6 +50,8 @@
     "gulp-terser": "^1.2.0",
     "js-yaml": "^3.4.6",
     "panini": "^1.3.0",
+    "postcss": "^8.3.5",
+    "postcss-inline-svg": "^5.0.0",
     "rimraf": "^2.4.3",
     "style-sherpa": "^1.0.0",
     "uncss": "^0.16.2",
